Working Single Flicks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Flick Flow Prototype</h1>
+    <h1>Flick Flow</h1>
     
     <div class="status" id="status">Waiting for gesture...</div>
     
